added gitignore and github pages

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <button class="transparent-button btn btn-custom" onclick="TODO">
                 <a
                   href="index.html"
-                  class="fw-bold text-black btn btn-custom transparent-button headertextcustom"
+                  class="fw-bold text-black btn btn-custom transparent-button headertext"
                   >
                   Home
                   <br />
